--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 script: phpunit
 
 matrix:
- allow_failures:
+allow_failures:
    - php: 5.6
    - php: hhvm
  fast_finish: true
@@ -37,18 +37,18 @@ services:
  - mysql
 # Cache composer packages so "composer install" is faster
 cache:
- directories:
+directories:
    - $HOME/.composer/cache/files
 # Matrix to test in every php version
 matrix:
  # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
- fast_finish: true
- include:
+fast_finish: true
+include:
    - php: 5.5
    - php: 5.6
    - php: 7.0
    - php: hhvm
- allow_failures:
+allow_failures:
    - php: hhvm
 # Define an environment variable
 env:
@@ -69,4 +69,4 @@ script:
  - phpunit
 # After a build, send email notification with the build results
 notifications:
- email: your_email
+email: kiamasimon90@gmail.com
